--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,10 @@ services:
       MYSQL_DATABASE: communication_db
     volumes:
       - ./db:/docker-entrypoint-initdb.d/
+  api:
+    image: p2_11:1.0
+    network_mode: "host"
+    volumes:
+      - .:/app/
+    depends_on:
+      - mysql
