--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,57 @@ modules.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm+all
 venv/
+
+
+### Start for Intellij Idea
+Agent/.idea/**/workspace.xml
+Agent/.idea/**/tasks.xml
+Agent/.idea/**/usage.statistics.xml
+Agent/.idea/**/dictionaries
+Agent/.idea/**/shelf
+Agent/.idea/**/contentModel.xml
+Agent/.idea/**/dataSources/
+Agent/.idea/**/dataSources.ids
+Agent/.idea/**/dataSources.local.xml
+Agent/.idea/**/sqlDataSources.xml
+Agent/.idea/**/dynamic.xml
+Agent/.idea/**/uiDesigner.xml
+Agent/.idea/**/dbnavigator.xml
+Agent/.idea/**/gradle.xml
+Agent/.idea/**/libraries
+Agent/cmake-build-*/
+Agent/.idea/**/mongoSettings.xml
+*.iws
+Agent/out/
+Agent/.idea_modules/
+atlassian-ide-plugin.xml
+Agent/.idea/replstate.xml
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+Agent/.idea/httpRequests
+Agent/.idea/caches/build_file_checksums.ser
+Agent/.idea/
+modules.xml
+Agent/.idea/misc.xml
+*.ipr
+Agent/.idea/sonarlint
+*.class
+*.log
+*.ctxt
+.mtj.tmp/
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+hs_err_pid*
+Agent/.gradle
+Agent/build/
+gradle-app.setting
+!gradle-wrapper.jar
+Agent/.gradletasknamecache
+Agent/**/build/
