--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,11 +15,11 @@ services:
     network_mode: "host"
     depends_on:
       - mysql
-    command: ["bash","-c", "/app/backend/wait-for-it.sh","uvicorn", "main:app", "--reload", "--port", "9000" ]
+    command: ["uvicorn", "main:app", "--reload", "--port", "9000" ]
   agent:
     image: p2_11_agent:1.0
     network_mode: "host"
     depends_on:
       - api
-    command: ["bash","-c", "/Agent/wait-for-it.sh", "java", "-jar", "./build/libs/Agent-all.skill" ]
+    command: ["java", "-jar", "./build/libs/Agent-all.skill" ]
 
